tests/snapshots/asm_snapshots__asm_i64_mul@i686-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i64::Int64 as core::ops::arith::Mul>::mul:
	push esi
	mov ecx, dword ptr [esp + 16]
	mov esi, dword ptr [esp + 8]
	mov eax, ecx
	imul ecx, dword ptr [esp + 12]
	mul esi
	imul esi, dword ptr [esp + 20]
	add ecx, esi
	add edx, ecx
	pop esi
	ret
