tests/snapshots/asm_snapshots__asm_i64_mul_armv7@armv7-unknown-linux-gnueabihf.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i64::Int64 as core::ops::arith::Mul>::mul:
	mul r1, r2, r1
	umull r12, r2, r2, r0
	mla r0, r3, r0, r1
	add r1, r0, r2
	mov r0, r12
	bx lr
