tests/snapshots/asm_snapshots__asm_i64_sub@i686-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i64::Int64 as core::ops::arith::Sub>::sub:
	mov eax, dword ptr [esp + 4]
	mov edx, dword ptr [esp + 8]
	sub eax, dword ptr [esp + 12]
	sbb edx, dword ptr [esp + 16]
	ret
