tests/snapshots/asm_snapshots__asm_i64_sub_x86_64@x86_64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i64::Int64 as core::ops::arith::Sub>::sub:
	mov eax, edi
	sub eax, edx
	sbb esi, ecx
	mov edx, esi
	ret
