tests/snapshots/asm_snapshots__asm_native_add_aarch64@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
bigints::native_add:
	adds x0, x2, x0
	adc x1, x3, x1
	ret
